Readme, some minor fixes